// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading level with another size 1`] = `
<div>
  <div>
    <h1
      class="sc-bdVaJa glmyfY"
    >
      Heading level 1
    </h1>
    <h3
      class="sc-bdVaJa hxFzhR"
    >
      Heading level 3
    </h3>
    <h3
      class="sc-bdVaJa glmyfY"
    >
      Heading level 3 size 1
    </h3>
  </div>
</div>
`;

exports[`renders knockout heading with different class 1`] = `
<div>
  <div>
    <h1
      class="sc-bdVaJa glmyfY"
    >
      Heading level 1
    </h1>
    <h1
      class="sc-bdVaJa elAebA"
    >
      Knockout Heading level 1
    </h1>
  </div>
</div>
`;
